sort.basic.gnome.AlgGnomeSort.scala.error
Erreur de compilation :
AlgGnomeSort:5: error: value =< is not a member of Int
  while (k=<lgr){
          ^